src/main/java/com/example/harumeonglog/global/error/code/OutboxErrorCode.java
package com.example.harumeonglog.global.error.code;

import lombok.Getter;
import lombok.RequiredArgsConstructor;
import org.springframework.http.HttpStatus;

@Getter
@RequiredArgsConstructor
public enum OutboxErrorCode implements BaseErrorCode {
    NOT_FOUND(HttpStatus.NOT_FOUND, "OUTBOX404", "outbox를 찾지 못했습니다."),
    ;

    private final HttpStatus httpStatus;
    private final String code;
    private final String message;
}
